generator client {
  provider        = "prisma-client-js"
  output          = "./generated/prisma-client-js"
  previewFeatures = ["fullTextSearch", "views"]
  binaryTargets   = ["native", "darwin", "darwin-arm64", "windows"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model ChargePoint {
  chargePointId           String            @id
  ocppProtocol            String?
  chargePointVendor       String?
  chargePointModel        String?
  chargePointSerialNumber String?
  chargeBoxSerialNumber   String?
  firmwareVersion         String?
  iccid                   String?
  imsi                    String?
  meterType               String?
  meterSerialNumber       String?
  description             String?
  note                    String?
  endPoint                String?
  updatedAt               DateTime          @updatedAt
  createdAt               DateTime          @default(now())
  simulationStatus        String            @default("Stop")
  ChargingProfile         ChargingProfile[]
  Configuration           Configuration[]
  Connector               Connector[]
  Log                     Log[]
  OcppTag                 OcppTag[]
  Reservation             Reservation[]
  Transaction             Transaction[]

  @@index([ocppProtocol])
}

model Connector {
  id              Int               @id @default(autoincrement())
  connectorId     Int
  chargePointId   String
  status          String?
  errorCode       String?
  errorInfo       String?
  vendorId        String?
  vendorErrorCode String?
  updatedAt       DateTime          @updatedAt
  createdAt       DateTime          @default(now())
  ChargingProfile ChargingProfile[]
  ChargePoint     ChargePoint       @relation(fields: [chargePointId], references: [chargePointId], onDelete: Cascade, onUpdate: NoAction)
  Reservation     Reservation[]
  Transaction     Transaction[]

  @@unique([chargePointId, connectorId])
}

model Configuration {
  id            Int         @id @default(autoincrement())
  key           String
  chargePointId String
  readonly      Boolean     @default(true)
  value         String
  type          String
  unit          String
  updatedAt     DateTime    @updatedAt
  createdAt     DateTime    @default(now())
  ChargePoint   ChargePoint @relation(fields: [chargePointId], references: [chargePointId], onDelete: Cascade, onUpdate: NoAction)

  @@unique([chargePointId, key])
}

model OcppTag {
  id            Int           @id @default(autoincrement())
  idTag         String
  chargePointId String
  parentIdTag   String?
  expiryDate    DateTime?
  status        String
  type          String
  updatedAt     DateTime      @updatedAt
  createdAt     DateTime      @default(now())
  ChargePoint   ChargePoint   @relation(fields: [chargePointId], references: [chargePointId], onDelete: Cascade, onUpdate: NoAction)
  Reservation   Reservation[]
  Transaction   Transaction[]

  @@unique([chargePointId, idTag])
}

model Transaction {
  id             Int          @id @default(autoincrement())
  transactionId  Int
  chargePointId  String
  connectorId    Int
  reservation    Int?         @unique
  idTag          String
  startTimestamp DateTime?
  meterStart     Int?
  stopTimestamp  DateTime?
  meterStop      Int?
  stopReason     String?
  updatedAt      DateTime     @updatedAt
  createdAt      DateTime     @default(now())
  Reservation    Reservation? @relation(fields: [reservation], references: [id])
  OcppTag        OcppTag      @relation(fields: [chargePointId, idTag], references: [chargePointId, idTag], onDelete: Cascade, onUpdate: NoAction)
  Connector      Connector    @relation(fields: [chargePointId, connectorId], references: [chargePointId, connectorId], onDelete: Cascade, onUpdate: NoAction)
  ChargePoint    ChargePoint  @relation(fields: [chargePointId], references: [chargePointId], onDelete: Cascade, onUpdate: NoAction)

  @@unique([chargePointId, transactionId])
}

model Reservation {
  id             Int          @id @default(autoincrement())
  reservationId  Int
  connectorId    Int
  chargePointId  String
  idTag          String
  expiryDatetime DateTime
  status         String?
  updatedAt      DateTime     @updatedAt
  createdAt      DateTime     @default(now())
  ChargePoint    ChargePoint  @relation(fields: [chargePointId], references: [chargePointId])
  OcppTag        OcppTag      @relation(fields: [chargePointId, idTag], references: [chargePointId, idTag], onDelete: Cascade, onUpdate: NoAction)
  Connector      Connector    @relation(fields: [chargePointId, connectorId], references: [chargePointId, connectorId], onDelete: Cascade, onUpdate: NoAction)
  Transaction    Transaction?

  @@unique([reservationId, connectorId, chargePointId])
}

model ChargingProfile {
  id                     Int         @id @default(autoincrement())
  chargingProfileId      Int
  chargePointId          String
  connectorId            Int
  stackLevel             Int
  chargingProfilePurpose String
  chargingProfileKind    String
  recurrencyKind         String?
  validFrom              DateTime?
  validTo                DateTime?
  duration               Int?
  startSchedule          DateTime?
  chargingRateUnit       String
  minChargingRate        Decimal?    @default(0.0)
  chargingSchedulePeriod String
  updatedAt              DateTime    @updatedAt
  createdAt              DateTime    @default(now())
  Connector              Connector   @relation(fields: [chargePointId, connectorId], references: [chargePointId, connectorId], onDelete: Cascade, onUpdate: NoAction)
  ChargePoint            ChargePoint @relation(fields: [chargePointId], references: [chargePointId], onDelete: Cascade, onUpdate: NoAction)

  @@unique([chargePointId, chargingProfileId, connectorId])
}

model Log {
  id                Int         @id @default(autoincrement())
  uniqueId          String
  chargePointId     String
  action            String?
  request           String?
  response          String?
  errorCode         String?
  errorDescription  String?
  errorDetails      String?
  requestTimestamp  DateTime?
  responseTimestamp DateTime?
  errorTimestamp    DateTime?
  updatedAt         DateTime    @updatedAt
  createdAt         DateTime    @default(now())
  ChargePoint       ChargePoint @relation(fields: [chargePointId], references: [chargePointId], onDelete: Cascade, onUpdate: NoAction)

  @@unique([uniqueId, chargePointId])
  @@index([action])
  @@index([requestTimestamp])
  @@index([responseTimestamp])
  @@index([errorTimestamp])
}
