//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table ChargePoint {
  chargePointId String [pk]
  ocppProtocol String
  chargePointVendor String
  chargePointModel String
  chargePointSerialNumber String
  chargeBoxSerialNumber String
  firmwareVersion String
  iccid String
  imsi String
  meterType String
  meterSerialNumber String
  description String
  note String
  endPoint String
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  simulationStatus String [not null, default: 'Stop']
  ChargingProfile ChargingProfile [not null]
  Configuration Configuration [not null]
  Connector Connector [not null]
  Log Log [not null]
  OcppTag OcppTag [not null]
  Reservation Reservation [not null]
  Transaction Transaction [not null]
}

Table Connector {
  id Int [pk, increment]
  connectorId Int [not null]
  chargePointId String [not null]
  status String
  errorCode String
  errorInfo String
  vendorId String
  vendorErrorCode String
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  ChargingProfile ChargingProfile [not null]
  ChargePoint ChargePoint [not null]
  Reservation Reservation [not null]
  Transaction Transaction [not null]

  indexes {
    (chargePointId, connectorId) [unique]
  }
}

Table Configuration {
  id Int [pk, increment]
  key String [not null]
  chargePointId String [not null]
  readonly Boolean [not null, default: true]
  value String [not null]
  type String [not null]
  unit String [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  ChargePoint ChargePoint [not null]

  indexes {
    (chargePointId, key) [unique]
  }
}

Table OcppTag {
  id Int [pk, increment]
  idTag String [not null]
  chargePointId String [not null]
  parentIdTag String
  expiryDate DateTime
  status String [not null]
  type String [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  ChargePoint ChargePoint [not null]
  Reservation Reservation [not null]
  Transaction Transaction [not null]

  indexes {
    (chargePointId, idTag) [unique]
  }
}

Table Transaction {
  id Int [pk, increment]
  transactionId Int [not null]
  chargePointId String [not null]
  connectorId Int [not null]
  reservation Int [unique]
  idTag String [not null]
  startTimestamp DateTime
  meterStart Int
  stopTimestamp DateTime
  meterStop Int
  stopReason String
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  Reservation Reservation
  OcppTag OcppTag [not null]
  Connector Connector [not null]
  ChargePoint ChargePoint [not null]

  indexes {
    (chargePointId, transactionId) [unique]
  }
}

Table Reservation {
  id Int [pk, increment]
  reservationId Int [not null]
  connectorId Int [not null]
  chargePointId String [not null]
  idTag String [not null]
  expiryDatetime DateTime [not null]
  status String
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  ChargePoint ChargePoint [not null]
  OcppTag OcppTag [not null]
  Connector Connector [not null]
  Transaction Transaction

  indexes {
    (reservationId, connectorId, chargePointId) [unique]
  }
}

Table ChargingProfile {
  id Int [pk, increment]
  chargingProfileId Int [not null]
  chargePointId String [not null]
  connectorId Int [not null]
  stackLevel Int [not null]
  chargingProfilePurpose String [not null]
  chargingProfileKind String [not null]
  recurrencyKind String
  validFrom DateTime
  validTo DateTime
  duration Int
  startSchedule DateTime
  chargingRateUnit String [not null]
  minChargingRate Decimal [default: 0]
  chargingSchedulePeriod String [not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  Connector Connector [not null]
  ChargePoint ChargePoint [not null]

  indexes {
    (chargePointId, chargingProfileId, connectorId) [unique]
  }
}

Table Log {
  id Int [pk, increment]
  uniqueId String [not null]
  chargePointId String [not null]
  action String
  request String
  response String
  errorCode String
  errorDescription String
  errorDetails String
  requestTimestamp DateTime
  responseTimestamp DateTime
  errorTimestamp DateTime
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  ChargePoint ChargePoint [not null]

  indexes {
    (uniqueId, chargePointId) [unique]
  }
}

Ref: Connector.chargePointId > ChargePoint.chargePointId [delete: Cascade]

Ref: Configuration.chargePointId > ChargePoint.chargePointId [delete: Cascade]

Ref: OcppTag.chargePointId > ChargePoint.chargePointId [delete: Cascade]

Ref: Transaction.reservation - Reservation.id

Ref: Transaction.(chargePointId, idTag) > OcppTag.(chargePointId, idTag) [delete: Cascade]

Ref: Transaction.(chargePointId, connectorId) > Connector.(chargePointId, connectorId) [delete: Cascade]

Ref: Transaction.chargePointId > ChargePoint.chargePointId [delete: Cascade]

Ref: Reservation.chargePointId > ChargePoint.chargePointId

Ref: Reservation.(chargePointId, idTag) > OcppTag.(chargePointId, idTag) [delete: Cascade]

Ref: Reservation.(chargePointId, connectorId) > Connector.(chargePointId, connectorId) [delete: Cascade]

Ref: ChargingProfile.(chargePointId, connectorId) > Connector.(chargePointId, connectorId) [delete: Cascade]

Ref: ChargingProfile.chargePointId > ChargePoint.chargePointId [delete: Cascade]

Ref: Log.chargePointId > ChargePoint.chargePointId [delete: Cascade]